fixed small styling problem with element going outside box on mobile view

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,12 +11,5 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-    /* background-color: rgba(0, 0, 0, 0.637); */
-    
+    monospace;  
 }
-
-
-/* img {
-  width: 375px;
-} */
